--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,3 +65,9 @@
     url: /en/pictures-of-finnish-nature/
     excerpt:
     image:
+
+- fin:
+    title: i
+    url: /i/
+    excerpt:
+    image:
