--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,8 +28,8 @@
     excerpt:
     image:
   en:
-    title: Activation Toys
-    url: /en/activation-toys/
+    title: Treat dispensers
+    url: /en/treat-dispensers/
     excerpt:
     image:
 
